parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    VAZIO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracoes_globais comandos FIM
Rule 2     declaracoes_globais -> declaracoes_globais declaracao_global
Rule 3     declaracoes_globais -> empty
Rule 4     declaracao_global -> declaracao_variavel
Rule 5     declaracao_global -> declaracao_funcao
Rule 6     declaracao_global -> declaracao_procedimento
Rule 7     declaracao_variavel -> tipo ID PONTO_VIRGULA
Rule 8     tipo -> INTEIRO
Rule 9     tipo -> REAL
Rule 10    tipo -> TIPO_TEXTO
Rule 11    comandos -> comandos comando
Rule 12    comandos -> empty
Rule 13    comando -> atribuicao
Rule 14    comando -> condicional
Rule 15    comando -> comando_repeticao
Rule 16    comando -> chamada_procedimento_stmt
Rule 17    comando -> comando_retorno
Rule 18    comando -> bloco_comandos
Rule 19    bloco_comandos -> ABRE_CHAVE comandos FECHA_CHAVE
Rule 20    comando_repeticao -> ENQUANTO ABRE_PAREN expressao FECHA_PAREN bloco_comandos
Rule 21    atribuicao -> ID IGUAL expressao PONTO_VIRGULA
Rule 22    condicional -> SE ABRE_PAREN expressao FECHA_PAREN bloco_comandos
Rule 23    condicional -> SE ABRE_PAREN expressao FECHA_PAREN bloco_comandos SENAO bloco_comandos
Rule 24    expressao -> expressao MAIS expressao
Rule 25    expressao -> expressao MENOS expressao
Rule 26    expressao -> expressao MULT expressao
Rule 27    expressao -> expressao DIV expressao
Rule 28    expressao -> expressao RESTO expressao
Rule 29    expressao -> expressao MAIOR expressao
Rule 30    expressao -> expressao MENOR expressao
Rule 31    expressao -> expressao MAIOR_IGUAL expressao
Rule 32    expressao -> expressao MENOR_IGUAL expressao
Rule 33    expressao -> expressao IGUALDADE expressao
Rule 34    expressao -> expressao DIFERENTE expressao
Rule 35    expressao -> expressao E_LOGICO expressao
Rule 36    expressao -> expressao OU_LOGICO expressao
Rule 37    expressao -> NEGACAO expressao
Rule 38    expressao -> fator
Rule 39    fator -> NUMERO
Rule 40    fator -> LITERAL_TEXTO
Rule 41    fator -> ID
Rule 42    fator -> ID ABRE_PAREN lista_argumentos FECHA_PAREN
Rule 43    chamada_procedimento_stmt -> ID ABRE_PAREN lista_argumentos FECHA_PAREN PONTO_VIRGULA
Rule 44    lista_argumentos -> argumentos
Rule 45    lista_argumentos -> empty
Rule 46    argumentos -> expressao
Rule 47    argumentos -> argumentos VIRGULA expressao
Rule 48    fator -> ABRE_PAREN expressao FECHA_PAREN
Rule 49    declaracao_funcao -> func_sig marker_enter_scope ABRE_CHAVE comandos_funcao FECHA_CHAVE marker_exit_scope
Rule 50    func_sig -> FUNCAO ID ABRE_PAREN lista_parametros FECHA_PAREN RETORNO tipo
Rule 51    marker_enter_scope -> empty
Rule 52    marker_exit_scope -> empty
Rule 53    declaracao_procedimento -> proc_sig marker_enter_scope ABRE_CHAVE comandos_funcao FECHA_CHAVE marker_exit_scope
Rule 54    proc_sig -> PROCEDIMENTO ID ABRE_PAREN lista_parametros FECHA_PAREN
Rule 55    comandos_funcao -> comandos_funcao comando_local
Rule 56    comandos_funcao -> empty
Rule 57    comando_local -> declaracao_variavel
Rule 58    comando_local -> comando
Rule 59    lista_parametros -> parametros
Rule 60    lista_parametros -> empty
Rule 61    parametros -> parametro
Rule 62    parametros -> parametros VIRGULA parametro
Rule 63    parametro -> tipo ID
Rule 64    comando_retorno -> RETORNO expressao PONTO_VIRGULA
Rule 65    comando_retorno -> RETORNO PONTO_VIRGULA
Rule 66    empty -> <empty>

Terminals, with rules where they appear

ABRE_CHAVE           : 19 49 53
ABRE_PAREN           : 20 22 23 42 43 48 50 54
DIFERENTE            : 34
DIV                  : 27
ENQUANTO             : 20
E_LOGICO             : 35
FECHA_CHAVE          : 19 49 53
FECHA_PAREN          : 20 22 23 42 43 48 50 54
FIM                  : 1
FUNCAO               : 50
ID                   : 7 21 41 42 43 50 54 63
IGUAL                : 21
IGUALDADE            : 33
INTEIRO              : 8
LITERAL_TEXTO        : 40
MAIOR                : 29
MAIOR_IGUAL          : 31
MAIS                 : 24
MENOR                : 30
MENOR_IGUAL          : 32
MENOS                : 25
MULT                 : 26
NEGACAO              : 37
NUMERO               : 39
OU_LOGICO            : 36
PONTO_VIRGULA        : 7 21 43 64 65
PROCEDIMENTO         : 54
REAL                 : 9
RESTO                : 28
RETORNO              : 50 64 65
SE                   : 22 23
SENAO                : 23
TIPO_TEXTO           : 10
VAZIO                : 
VIRGULA              : 47 62
error                : 

Nonterminals, with rules where they appear

argumentos           : 44 47
atribuicao           : 13
bloco_comandos       : 18 20 22 23 23
chamada_procedimento_stmt : 16
comando              : 11 58
comando_local        : 55
comando_repeticao    : 15
comando_retorno      : 17
comandos             : 1 11 19
comandos_funcao      : 49 53 55
condicional          : 14
declaracao_funcao    : 5
declaracao_global    : 2
declaracao_procedimento : 6
declaracao_variavel  : 4 57
declaracoes_globais  : 1 2
empty                : 3 12 45 51 52 56 60
expressao            : 20 21 22 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 46 47 48 64
fator                : 38
func_sig             : 49
lista_argumentos     : 42 43
lista_parametros     : 50 54
marker_enter_scope   : 49 53
marker_exit_scope    : 49 53
parametro            : 61 62
parametros           : 59 62
proc_sig             : 53
programa             : 0
tipo                 : 7 50 63

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracoes_globais comandos FIM
    (2) declaracoes_globais -> . declaracoes_globais declaracao_global
    (3) declaracoes_globais -> . empty
    (66) empty -> .

    INTEIRO         reduce using rule 66 (empty -> .)
    REAL            reduce using rule 66 (empty -> .)
    TIPO_TEXTO      reduce using rule 66 (empty -> .)
    FUNCAO          reduce using rule 66 (empty -> .)
    PROCEDIMENTO    reduce using rule 66 (empty -> .)
    FIM             reduce using rule 66 (empty -> .)
    ID              reduce using rule 66 (empty -> .)
    SE              reduce using rule 66 (empty -> .)
    ENQUANTO        reduce using rule 66 (empty -> .)
    RETORNO         reduce using rule 66 (empty -> .)
    ABRE_CHAVE      reduce using rule 66 (empty -> .)

    programa                       shift and go to state 1
    declaracoes_globais            shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracoes_globais . comandos FIM
    (2) declaracoes_globais -> declaracoes_globais . declaracao_global
    (11) comandos -> . comandos comando
    (12) comandos -> . empty
    (4) declaracao_global -> . declaracao_variavel
    (5) declaracao_global -> . declaracao_funcao
    (6) declaracao_global -> . declaracao_procedimento
    (66) empty -> .
    (7) declaracao_variavel -> . tipo ID PONTO_VIRGULA
    (49) declaracao_funcao -> . func_sig marker_enter_scope ABRE_CHAVE comandos_funcao FECHA_CHAVE marker_exit_scope
    (53) declaracao_procedimento -> . proc_sig marker_enter_scope ABRE_CHAVE comandos_funcao FECHA_CHAVE marker_exit_scope
    (8) tipo -> . INTEIRO
    (9) tipo -> . REAL
    (10) tipo -> . TIPO_TEXTO
    (50) func_sig -> . FUNCAO ID ABRE_PAREN lista_parametros FECHA_PAREN RETORNO tipo
    (54) proc_sig -> . PROCEDIMENTO ID ABRE_PAREN lista_parametros FECHA_PAREN

    FIM             reduce using rule 66 (empty -> .)
    ID              reduce using rule 66 (empty -> .)
    SE              reduce using rule 66 (empty -> .)
    ENQUANTO        reduce using rule 66 (empty -> .)
    RETORNO         reduce using rule 66 (empty -> .)
    ABRE_CHAVE      reduce using rule 66 (empty -> .)
    INTEIRO         shift and go to state 13
    REAL            shift and go to state 14
    TIPO_TEXTO      shift and go to state 15
    FUNCAO          shift and go to state 16
    PROCEDIMENTO    shift and go to state 17

    comandos                       shift and go to state 4
    declaracao_global              shift and go to state 5
    empty                          shift and go to state 6
    declaracao_variavel            shift and go to state 7
    declaracao_funcao              shift and go to state 8
    declaracao_procedimento        shift and go to state 9
    tipo                           shift and go to state 10
    func_sig                       shift and go to state 11
    proc_sig                       shift and go to state 12

state 3

    (3) declaracoes_globais -> empty .

    INTEIRO         reduce using rule 3 (declaracoes_globais -> empty .)
    REAL            reduce using rule 3 (declaracoes_globais -> empty .)
    TIPO_TEXTO      reduce using rule 3 (declaracoes_globais -> empty .)
    FUNCAO          reduce using rule 3 (declaracoes_globais -> empty .)
    PROCEDIMENTO    reduce using rule 3 (declaracoes_globais -> empty .)
    FIM             reduce using rule 3 (declaracoes_globais -> empty .)
    ID              reduce using rule 3 (declaracoes_globais -> empty .)
    SE              reduce using rule 3 (declaracoes_globais -> empty .)
    ENQUANTO        reduce using rule 3 (declaracoes_globais -> empty .)
    RETORNO         reduce using rule 3 (declaracoes_globais -> empty .)
    ABRE_CHAVE      reduce using rule 3 (declaracoes_globais -> empty .)


state 4

    (1) programa -> declaracoes_globais comandos . FIM
    (11) comandos -> comandos . comando
    (13) comando -> . atribuicao
    (14) comando -> . condicional
    (15) comando -> . comando_repeticao
    (16) comando -> . chamada_procedimento_stmt
    (17) comando -> . comando_retorno
    (18) comando -> . bloco_comandos
    (21) atribuicao -> . ID IGUAL expressao PONTO_VIRGULA
    (22) condicional -> . SE ABRE_PAREN expressao FECHA_PAREN bloco_comandos
    (23) condicional -> . SE ABRE_PAREN expressao FECHA_PAREN bloco_comandos SENAO bloco_comandos
    (20) comando_repeticao -> . ENQUANTO ABRE_PAREN expressao FECHA_PAREN bloco_comandos
    (43) chamada_procedimento_stmt -> . ID ABRE_PAREN lista_argumentos FECHA_PAREN PONTO_VIRGULA
    (64) comando_retorno -> . RETORNO expressao PONTO_VIRGULA
    (65) comando_retorno -> . RETORNO PONTO_VIRGULA
    (19) bloco_comandos -> . ABRE_CHAVE comandos FECHA_CHAVE

    FIM             shift and go to state 18
    ID              shift and go to state 26
    SE              shift and go to state 27
    ENQUANTO        shift and go to state 28
    RETORNO         shift and go to state 29
    ABRE_CHAVE      shift and go to state 30

    comando                        shift and go to state 19
    atribuicao                     shift and go to state 20
    condicional                    shift and go to state 21
    comando_repeticao              shift and go to state 22
    chamada_procedimento_stmt      shift and go to state 23
    comando_retorno                shift and go to state 24
    bloco_comandos                 shift and go to state 25

state 5

    (2) declaracoes_globais -> declaracoes_globais declaracao_global .

    INTEIRO         reduce using rule 2 (declaracoes_globais -> declaracoes_globais declaracao_global .)
    REAL            reduce using rule 2 (declaracoes_globais -> declaracoes_globais declaracao_global .)
    TIPO_TEXTO      reduce using rule 2 (declaracoes_globais -> declaracoes_globais declaracao_global .)
    FUNCAO          reduce using rule 2 (declaracoes_globais -> declaracoes_globais declaracao_global .)
    PROCEDIMENTO    reduce using rule 2 (declaracoes_globais -> declaracoes_globais declaracao_global .)
    FIM             reduce using rule 2 (declaracoes_globais -> declaracoes_globais declaracao_global .)
    ID              reduce using rule 2 (declaracoes_globais -> declaracoes_globais declaracao_global .)
    SE              reduce using rule 2 (declaracoes_globais -> declaracoes_globais declaracao_global .)
    ENQUANTO        reduce using rule 2 (declaracoes_globais -> declaracoes_globais declaracao_global .)
    RETORNO         reduce using rule 2 (declaracoes_globais -> declaracoes_globais declaracao_global .)
    ABRE_CHAVE      reduce using rule 2 (declaracoes_globais -> declaracoes_globais declaracao_global .)


state 6

    (12) comandos -> empty .

    FIM             reduce using rule 12 (comandos -> empty .)
    ID              reduce using rule 12 (comandos -> empty .)
    SE              reduce using rule 12 (comandos -> empty .)
    ENQUANTO        reduce using rule 12 (comandos -> empty .)
    RETORNO         reduce using rule 12 (comandos -> empty .)
    ABRE_CHAVE      reduce using rule 12 (comandos -> empty .)
    FECHA_CHAVE     reduce using rule 12 (comandos -> empty .)


state 7

    (4) declaracao_global -> declaracao_variavel .

    INTEIRO         reduce using rule 4 (declaracao_global -> declaracao_variavel .)
    REAL            reduce using rule 4 (declaracao_global -> declaracao_variavel .)
    TIPO_TEXTO      reduce using rule 4 (declaracao_global -> declaracao_variavel .)
    FUNCAO          reduce using rule 4 (declaracao_global -> declaracao_variavel .)
    PROCEDIMENTO    reduce using rule 4 (declaracao_global -> declaracao_variavel .)
    FIM             reduce using rule 4 (declaracao_global -> declaracao_variavel .)
    ID              reduce using rule 4 (declaracao_global -> declaracao_variavel .)
    SE              reduce using rule 4 (declaracao_global -> declaracao_variavel .)
    ENQUANTO        reduce using rule 4 (declaracao_global -> declaracao_variavel .)
    RETORNO         reduce using rule 4 (declaracao_global -> declaracao_variavel .)
    ABRE_CHAVE      reduce using rule 4 (declaracao_global -> declaracao_variavel .)


state 8

    (5) declaracao_global -> declaracao_funcao .

    INTEIRO         reduce using rule 5 (declaracao_global -> declaracao_funcao .)
    REAL            reduce using rule 5 (declaracao_global -> declaracao_funcao .)
    TIPO_TEXTO      reduce using rule 5 (declaracao_global -> declaracao_funcao .)
    FUNCAO          reduce using rule 5 (declaracao_global -> declaracao_funcao .)
    PROCEDIMENTO    reduce using rule 5 (declaracao_global -> declaracao_funcao .)
    FIM             reduce using rule 5 (declaracao_global -> declaracao_funcao .)
    ID              reduce using rule 5 (declaracao_global -> declaracao_funcao .)
    SE              reduce using rule 5 (declaracao_global -> declaracao_funcao .)
    ENQUANTO        reduce using rule 5 (declaracao_global -> declaracao_funcao .)
    RETORNO         reduce using rule 5 (declaracao_global -> declaracao_funcao .)
    ABRE_CHAVE      reduce using rule 5 (declaracao_global -> declaracao_funcao .)


state 9

    (6) declaracao_global -> declaracao_procedimento .

    INTEIRO         reduce using rule 6 (declaracao_global -> declaracao_procedimento .)
    REAL            reduce using rule 6 (declaracao_global -> declaracao_procedimento .)
    TIPO_TEXTO      reduce using rule 6 (declaracao_global -> declaracao_procedimento .)
    FUNCAO          reduce using rule 6 (declaracao_global -> declaracao_procedimento .)
    PROCEDIMENTO    reduce using rule 6 (declaracao_global -> declaracao_procedimento .)
    FIM             reduce using rule 6 (declaracao_global -> declaracao_procedimento .)
    ID              reduce using rule 6 (declaracao_global -> declaracao_procedimento .)
    SE              reduce using rule 6 (declaracao_global -> declaracao_procedimento .)
    ENQUANTO        reduce using rule 6 (declaracao_global -> declaracao_procedimento .)
    RETORNO         reduce using rule 6 (declaracao_global -> declaracao_procedimento .)
    ABRE_CHAVE      reduce using rule 6 (declaracao_global -> declaracao_procedimento .)


state 10

    (7) declaracao_variavel -> tipo . ID PONTO_VIRGULA

    ID              shift and go to state 31


state 11

    (49) declaracao_funcao -> func_sig . marker_enter_scope ABRE_CHAVE comandos_funcao FECHA_CHAVE marker_exit_scope
    (51) marker_enter_scope -> . empty
    (66) empty -> .

    ABRE_CHAVE      reduce using rule 66 (empty -> .)

    marker_enter_scope             shift and go to state 32
    empty                          shift and go to state 33

state 12

    (53) declaracao_procedimento -> proc_sig . marker_enter_scope ABRE_CHAVE comandos_funcao FECHA_CHAVE marker_exit_scope
    (51) marker_enter_scope -> . empty
    (66) empty -> .

    ABRE_CHAVE      reduce using rule 66 (empty -> .)

    marker_enter_scope             shift and go to state 34
    empty                          shift and go to state 33

state 13

    (8) tipo -> INTEIRO .

    ID              reduce using rule 8 (tipo -> INTEIRO .)
    ABRE_CHAVE      reduce using rule 8 (tipo -> INTEIRO .)


state 14

    (9) tipo -> REAL .

    ID              reduce using rule 9 (tipo -> REAL .)
    ABRE_CHAVE      reduce using rule 9 (tipo -> REAL .)


state 15

    (10) tipo -> TIPO_TEXTO .

    ID              reduce using rule 10 (tipo -> TIPO_TEXTO .)
    ABRE_CHAVE      reduce using rule 10 (tipo -> TIPO_TEXTO .)


state 16

    (50) func_sig -> FUNCAO . ID ABRE_PAREN lista_parametros FECHA_PAREN RETORNO tipo

    ID              shift and go to state 35


state 17

    (54) proc_sig -> PROCEDIMENTO . ID ABRE_PAREN lista_parametros FECHA_PAREN

    ID              shift and go to state 36


state 18

    (1) programa -> declaracoes_globais comandos FIM .

    $end            reduce using rule 1 (programa -> declaracoes_globais comandos FIM .)


state 19

    (11) comandos -> comandos comando .

    FIM             reduce using rule 11 (comandos -> comandos comando .)
    ID              reduce using rule 11 (comandos -> comandos comando .)
    SE              reduce using rule 11 (comandos -> comandos comando .)
    ENQUANTO        reduce using rule 11 (comandos -> comandos comando .)
    RETORNO         reduce using rule 11 (comandos -> comandos comando .)
    ABRE_CHAVE      reduce using rule 11 (comandos -> comandos comando .)
    FECHA_CHAVE     reduce using rule 11 (comandos -> comandos comando .)


state 20

    (13) comando -> atribuicao .

    FIM             reduce using rule 13 (comando -> atribuicao .)
    ID              reduce using rule 13 (comando -> atribuicao .)
    SE              reduce using rule 13 (comando -> atribuicao .)
    ENQUANTO        reduce using rule 13 (comando -> atribuicao .)
    RETORNO         reduce using rule 13 (comando -> atribuicao .)
    ABRE_CHAVE      reduce using rule 13 (comando -> atribuicao .)
    FECHA_CHAVE     reduce using rule 13 (comando -> atribuicao .)
    INTEIRO         reduce using rule 13 (comando -> atribuicao .)
    REAL            reduce using rule 13 (comando -> atribuicao .)
    TIPO_TEXTO      reduce using rule 13 (comando -> atribuicao .)


state 21

    (14) comando -> condicional .

    FIM             reduce using rule 14 (comando -> condicional .)
    ID              reduce using rule 14 (comando -> condicional .)
    SE              reduce using rule 14 (comando -> condicional .)
    ENQUANTO        reduce using rule 14 (comando -> condicional .)
    RETORNO         reduce using rule 14 (comando -> condicional .)
    ABRE_CHAVE      reduce using rule 14 (comando -> condicional .)
    FECHA_CHAVE     reduce using rule 14 (comando -> condicional .)
    INTEIRO         reduce using rule 14 (comando -> condicional .)
    REAL            reduce using rule 14 (comando -> condicional .)
    TIPO_TEXTO      reduce using rule 14 (comando -> condicional .)


state 22

    (15) comando -> comando_repeticao .

    FIM             reduce using rule 15 (comando -> comando_repeticao .)
    ID              reduce using rule 15 (comando -> comando_repeticao .)
    SE              reduce using rule 15 (comando -> comando_repeticao .)
    ENQUANTO        reduce using rule 15 (comando -> comando_repeticao .)
    RETORNO         reduce using rule 15 (comando -> comando_repeticao .)
    ABRE_CHAVE      reduce using rule 15 (comando -> comando_repeticao .)
    FECHA_CHAVE     reduce using rule 15 (comando -> comando_repeticao .)
    INTEIRO         reduce using rule 15 (comando -> comando_repeticao .)
    REAL            reduce using rule 15 (comando -> comando_repeticao .)
    TIPO_TEXTO      reduce using rule 15 (comando -> comando_repeticao .)


state 23

    (16) comando -> chamada_procedimento_stmt .

    FIM             reduce using rule 16 (comando -> chamada_procedimento_stmt .)
    ID              reduce using rule 16 (comando -> chamada_procedimento_stmt .)
    SE              reduce using rule 16 (comando -> chamada_procedimento_stmt .)
    ENQUANTO        reduce using rule 16 (comando -> chamada_procedimento_stmt .)
    RETORNO         reduce using rule 16 (comando -> chamada_procedimento_stmt .)
    ABRE_CHAVE      reduce using rule 16 (comando -> chamada_procedimento_stmt .)
    FECHA_CHAVE     reduce using rule 16 (comando -> chamada_procedimento_stmt .)
    INTEIRO         reduce using rule 16 (comando -> chamada_procedimento_stmt .)
    REAL            reduce using rule 16 (comando -> chamada_procedimento_stmt .)
    TIPO_TEXTO      reduce using rule 16 (comando -> chamada_procedimento_stmt .)


state 24

    (17) comando -> comando_retorno .

    FIM             reduce using rule 17 (comando -> comando_retorno .)
    ID              reduce using rule 17 (comando -> comando_retorno .)
    SE              reduce using rule 17 (comando -> comando_retorno .)
    ENQUANTO        reduce using rule 17 (comando -> comando_retorno .)
    RETORNO         reduce using rule 17 (comando -> comando_retorno .)
    ABRE_CHAVE      reduce using rule 17 (comando -> comando_retorno .)
    FECHA_CHAVE     reduce using rule 17 (comando -> comando_retorno .)
    INTEIRO         reduce using rule 17 (comando -> comando_retorno .)
    REAL            reduce using rule 17 (comando -> comando_retorno .)
    TIPO_TEXTO      reduce using rule 17 (comando -> comando_retorno .)


state 25

    (18) comando -> bloco_comandos .

    FIM             reduce using rule 18 (comando -> bloco_comandos .)
    ID              reduce using rule 18 (comando -> bloco_comandos .)
    SE              reduce using rule 18 (comando -> bloco_comandos .)
    ENQUANTO        reduce using rule 18 (comando -> bloco_comandos .)
    RETORNO         reduce using rule 18 (comando -> bloco_comandos .)
    ABRE_CHAVE      reduce using rule 18 (comando -> bloco_comandos .)
    FECHA_CHAVE     reduce using rule 18 (comando -> bloco_comandos .)
    INTEIRO         reduce using rule 18 (comando -> bloco_comandos .)
    REAL            reduce using rule 18 (comando -> bloco_comandos .)
    TIPO_TEXTO      reduce using rule 18 (comando -> bloco_comandos .)


state 26

    (21) atribuicao -> ID . IGUAL expressao PONTO_VIRGULA
    (43) chamada_procedimento_stmt -> ID . ABRE_PAREN lista_argumentos FECHA_PAREN PONTO_VIRGULA

    IGUAL           shift and go to state 37
    ABRE_PAREN      shift and go to state 38


state 27

    (22) condicional -> SE . ABRE_PAREN expressao FECHA_PAREN bloco_comandos
    (23) condicional -> SE . ABRE_PAREN expressao FECHA_PAREN bloco_comandos SENAO bloco_comandos

    ABRE_PAREN      shift and go to state 39


state 28

    (20) comando_repeticao -> ENQUANTO . ABRE_PAREN expressao FECHA_PAREN bloco_comandos

    ABRE_PAREN      shift and go to state 40


state 29

    (64) comando_retorno -> RETORNO . expressao PONTO_VIRGULA
    (65) comando_retorno -> RETORNO . PONTO_VIRGULA
    (24) expressao -> . expressao MAIS expressao
    (25) expressao -> . expressao MENOS expressao
    (26) expressao -> . expressao MULT expressao
    (27) expressao -> . expressao DIV expressao
    (28) expressao -> . expressao RESTO expressao
    (29) expressao -> . expressao MAIOR expressao
    (30) expressao -> . expressao MENOR expressao
    (31) expressao -> . expressao MAIOR_IGUAL expressao
    (32) expressao -> . expressao MENOR_IGUAL expressao
    (33) expressao -> . expressao IGUALDADE expressao
    (34) expressao -> . expressao DIFERENTE expressao
    (35) expressao -> . expressao E_LOGICO expressao
    (36) expressao -> . expressao OU_LOGICO expressao
    (37) expressao -> . NEGACAO expressao
    (38) expressao -> . fator
    (39) fator -> . NUMERO
    (40) fator -> . LITERAL_TEXTO
    (41) fator -> . ID
    (42) fator -> . ID ABRE_PAREN lista_argumentos FECHA_PAREN
    (48) fator -> . ABRE_PAREN expressao FECHA_PAREN

    PONTO_VIRGULA   shift and go to state 42
    NEGACAO         shift and go to state 43
    NUMERO          shift and go to state 45
    LITERAL_TEXTO   shift and go to state 46
    ID              shift and go to state 47
    ABRE_PAREN      shift and go to state 48

    expressao                      shift and go to state 41
    fator                          shift and go to state 44

state 30

    (19) bloco_comandos -> ABRE_CHAVE . comandos FECHA_CHAVE
    (11) comandos -> . comandos comando
    (12) comandos -> . empty
    (66) empty -> .

    FECHA_CHAVE     reduce using rule 66 (empty -> .)
    ID              reduce using rule 66 (empty -> .)
    SE              reduce using rule 66 (empty -> .)
    ENQUANTO        reduce using rule 66 (empty -> .)
    RETORNO         reduce using rule 66 (empty -> .)
    ABRE_CHAVE      reduce using rule 66 (empty -> .)

    comandos                       shift and go to state 49
    empty                          shift and go to state 6

state 31

    (7) declaracao_variavel -> tipo ID . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 50


state 32

    (49) declaracao_funcao -> func_sig marker_enter_scope . ABRE_CHAVE comandos_funcao FECHA_CHAVE marker_exit_scope

    ABRE_CHAVE      shift and go to state 51


state 33

    (51) marker_enter_scope -> empty .

    ABRE_CHAVE      reduce using rule 51 (marker_enter_scope -> empty .)


state 34

    (53) declaracao_procedimento -> proc_sig marker_enter_scope . ABRE_CHAVE comandos_funcao FECHA_CHAVE marker_exit_scope

    ABRE_CHAVE      shift and go to state 52


state 35

    (50) func_sig -> FUNCAO ID . ABRE_PAREN lista_parametros FECHA_PAREN RETORNO tipo

    ABRE_PAREN      shift and go to state 53


state 36

    (54) proc_sig -> PROCEDIMENTO ID . ABRE_PAREN lista_parametros FECHA_PAREN

    ABRE_PAREN      shift and go to state 54


state 37

    (21) atribuicao -> ID IGUAL . expressao PONTO_VIRGULA
    (24) expressao -> . expressao MAIS expressao
    (25) expressao -> . expressao MENOS expressao
    (26) expressao -> . expressao MULT expressao
    (27) expressao -> . expressao DIV expressao
    (28) expressao -> . expressao RESTO expressao
    (29) expressao -> . expressao MAIOR expressao
    (30) expressao -> . expressao MENOR expressao
    (31) expressao -> . expressao MAIOR_IGUAL expressao
    (32) expressao -> . expressao MENOR_IGUAL expressao
    (33) expressao -> . expressao IGUALDADE expressao
    (34) expressao -> . expressao DIFERENTE expressao
    (35) expressao -> . expressao E_LOGICO expressao
    (36) expressao -> . expressao OU_LOGICO expressao
    (37) expressao -> . NEGACAO expressao
    (38) expressao -> . fator
    (39) fator -> . NUMERO
    (40) fator -> . LITERAL_TEXTO
    (41) fator -> . ID
    (42) fator -> . ID ABRE_PAREN lista_argumentos FECHA_PAREN
    (48) fator -> . ABRE_PAREN expressao FECHA_PAREN

    NEGACAO         shift and go to state 43
    NUMERO          shift and go to state 45
    LITERAL_TEXTO   shift and go to state 46
    ID              shift and go to state 47
    ABRE_PAREN      shift and go to state 48

    expressao                      shift and go to state 55
    fator                          shift and go to state 44

state 38

    (43) chamada_procedimento_stmt -> ID ABRE_PAREN . lista_argumentos FECHA_PAREN PONTO_VIRGULA
    (44) lista_argumentos -> . argumentos
    (45) lista_argumentos -> . empty
    (46) argumentos -> . expressao
    (47) argumentos -> . argumentos VIRGULA expressao
    (66) empty -> .
    (24) expressao -> . expressao MAIS expressao
    (25) expressao -> . expressao MENOS expressao
    (26) expressao -> . expressao MULT expressao
    (27) expressao -> . expressao DIV expressao
    (28) expressao -> . expressao RESTO expressao
    (29) expressao -> . expressao MAIOR expressao
    (30) expressao -> . expressao MENOR expressao
    (31) expressao -> . expressao MAIOR_IGUAL expressao
    (32) expressao -> . expressao MENOR_IGUAL expressao
    (33) expressao -> . expressao IGUALDADE expressao
    (34) expressao -> . expressao DIFERENTE expressao
    (35) expressao -> . expressao E_LOGICO expressao
    (36) expressao -> . expressao OU_LOGICO expressao
    (37) expressao -> . NEGACAO expressao
    (38) expressao -> . fator
    (39) fator -> . NUMERO
    (40) fator -> . LITERAL_TEXTO
    (41) fator -> . ID
    (42) fator -> . ID ABRE_PAREN lista_argumentos FECHA_PAREN
    (48) fator -> . ABRE_PAREN expressao FECHA_PAREN

    FECHA_PAREN     reduce using rule 66 (empty -> .)
    NEGACAO         shift and go to state 43
    NUMERO          shift and go to state 45
    LITERAL_TEXTO   shift and go to state 46
    ID              shift and go to state 47
    ABRE_PAREN      shift and go to state 48

    lista_argumentos               shift and go to state 56
    argumentos                     shift and go to state 57
    empty                          shift and go to state 58
    expressao                      shift and go to state 59
    fator                          shift and go to state 44

state 39

    (22) condicional -> SE ABRE_PAREN . expressao FECHA_PAREN bloco_comandos
    (23) condicional -> SE ABRE_PAREN . expressao FECHA_PAREN bloco_comandos SENAO bloco_comandos
    (24) expressao -> . expressao MAIS expressao
    (25) expressao -> . expressao MENOS expressao
    (26) expressao -> . expressao MULT expressao
    (27) expressao -> . expressao DIV expressao
    (28) expressao -> . expressao RESTO expressao
    (29) expressao -> . expressao MAIOR expressao
    (30) expressao -> . expressao MENOR expressao
    (31) expressao -> . expressao MAIOR_IGUAL expressao
    (32) expressao -> . expressao MENOR_IGUAL expressao
    (33) expressao -> . expressao IGUALDADE expressao
    (34) expressao -> . expressao DIFERENTE expressao
    (35) expressao -> . expressao E_LOGICO expressao
    (36) expressao -> . expressao OU_LOGICO expressao
    (37) expressao -> . NEGACAO expressao
    (38) expressao -> . fator
    (39) fator -> . NUMERO
    (40) fator -> . LITERAL_TEXTO
    (41) fator -> . ID
    (42) fator -> . ID ABRE_PAREN lista_argumentos FECHA_PAREN
    (48) fator -> . ABRE_PAREN expressao FECHA_PAREN

    NEGACAO         shift and go to state 43
    NUMERO          shift and go to state 45
    LITERAL_TEXTO   shift and go to state 46
    ID              shift and go to state 47
    ABRE_PAREN      shift and go to state 48

    expressao                      shift and go to state 60
    fator                          shift and go to state 44

state 40

    (20) comando_repeticao -> ENQUANTO ABRE_PAREN . expressao FECHA_PAREN bloco_comandos
    (24) expressao -> . expressao MAIS expressao
    (25) expressao -> . expressao MENOS expressao
    (26) expressao -> . expressao MULT expressao
    (27) expressao -> . expressao DIV expressao
    (28) expressao -> . expressao RESTO expressao
    (29) expressao -> . expressao MAIOR expressao
    (30) expressao -> . expressao MENOR expressao
    (31) expressao -> . expressao MAIOR_IGUAL expressao
    (32) expressao -> . expressao MENOR_IGUAL expressao
    (33) expressao -> . expressao IGUALDADE expressao
    (34) expressao -> . expressao DIFERENTE expressao
    (35) expressao -> . expressao E_LOGICO expressao
    (36) expressao -> . expressao OU_LOGICO expressao
    (37) expressao -> . NEGACAO expressao
    (38) expressao -> . fator
    (39) fator -> . NUMERO
    (40) fator -> . LITERAL_TEXTO
    (41) fator -> . ID
    (42) fator -> . ID ABRE_PAREN lista_argumentos FECHA_PAREN
    (48) fator -> . ABRE_PAREN expressao FECHA_PAREN

    NEGACAO         shift and go to state 43
    NUMERO          shift and go to state 45
    LITERAL_TEXTO   shift and go to state 46
    ID              shift and go to state 47
    ABRE_PAREN      shift and go to state 48

    expressao                      shift and go to state 61
    fator                          shift and go to state 44

state 41
